<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/navigation_rates"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="openRatesActivity"
            android:text="@string/navigation_rates" />

        <Button
            android:id="@+id/navigation_gold"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="openGoldActivity"
            android:text="@string/navigation_gold" />

        <Button
            android:id="@+id/navigation_exchange"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="openExchangeActivity"
            android:text="@string/navigation_exchange" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>