<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/form_container" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/exchange_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />


    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="151dp">

        <TextView
            android:id="@+id/currency_top_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_top_label" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/currency_top_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0.0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="PLN" />
        </LinearLayout>

        <TextView
            android:id="@+id/currency_bottom_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_bottom_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/currency_bottom_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0.0" />

            <Spinner
                android:id="@+id/currency_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>